<?xml version="1.0" encoding="utf-8"?>   
<PreferenceScreen     
    xmlns:android="http://schemas.android.com/apk/res/android"             
    android:title="@string/app_name"       
    > 
    <CheckBoxPreference
        android:key="enter_send"
        android:title="@string/enter_send"
        android:summaryOn="@string/cancel"
        android:summaryOff="@string/use"
        android:defaultValue="true"
        android:layout="@layout/preference"/>   
    <CheckBoxPreference
        android:key="intercept"
        android:title="@string/intercept"
        android:summaryOn="@string/cancel"
        android:summaryOff="@string/use"
        android:defaultValue="true"
        android:layout="@layout/preference"/> 
     <CheckBoxPreference
        android:key="strangers"
        android:title="@string/strangers"
        android:summaryOn="@string/cancel"
        android:summaryOff="@string/use"
        android:defaultValue="false"
        android:layout="@layout/preference"/> 
    <CheckBoxPreference
        android:key="sendagain"
        android:title="@string/send_again"
        android:summaryOn="@string/cancel"
        android:summaryOff="@string/use"
        android:defaultValue="false"
        android:layout="@layout/preference"/> 
     <CheckBoxPreference
        android:key="quickShow"
        android:title="@string/quickShow"
        android:summaryOn="@string/cancel"
        android:summaryOff="@string/use"
        android:defaultValue="true"
        android:layout="@layout/preference"/> 
      <ListPreference
        android:defaultValue="@array/Timing"
        android:entries="@array/Timing"
        android:entryValues="@array/TimingValue"
        android:key="TimingOut"
        android:summary="@string/summary"
        android:title="@string/dealMsg"
        android:layout="@layout/preference"/> 
     <ListPreference
        android:defaultValue="@array/anim"
        android:entries="@array/anim"
        android:entryValues="@array/animValue"
        android:key="anim"
        android:summary="@string/summary"
        android:title="@string/anim"
        android:layout="@layout/preference"/>
</PreferenceScreen> 
